--- a/Practica4.qmd
+++ b/Practica4.qmd
@@ -21,7 +21,7 @@ datos <- read.table("bloodpres1.txt", header=TRUE)
 head(datos)
 ```
 
-- **Seleccionamos los hombres, representamos un diagrama de dispersión y ajustamos un modelo de regresión lineal con la función `lm()`**
+-   **Seleccionamos los hombres, representamos un diagrama de dispersión y ajustamos un modelo de regresión lineal con la función `lm()`**
 
 ```{r, include=TRUE}
 pos <- which(datos$sex=="M")
@@ -37,23 +37,25 @@ cor(datos.male$age, datos.male$sbp)
 ## Modelo de regresión lineal ##
 model.male <- lm(sbp~age, data=datos.male)
 ```
-- **Proporciona una interpretación para los coeficientes**
+
+-   **Proporciona una interpretación para los coeficientes**
+
 ```{r, include=TRUE}
 summary(model.male)
 ```
-* $\beta_0=110.0385$ mmHg: Valor esperado para un hombre de 0 años de edad (en este ejemplo, no tiene sentido)
 
-* $\beta_1=0.9614$: Por cada año que aumenta la edad de un hombre, se espera que la presión sistólica aumente en 0.9614 mmHg.
+-   $\beta_0=110.0385$ mmHg: Valor esperado para un hombre de 0 años de edad (en este ejemplo, no tiene sentido)
 
+-   $\beta_1=0.9614$: Por cada año que aumenta la edad de un hombre, se espera que la presión sistólica aumente en 0.9614 mmHg.
 
-- **Representa gráficamente la línea ajustada**
+-   **Representa gráficamente la línea ajustada**
 
 ```{r, include=TRUE}
 plot(datos.male$age, datos.male$sbp)
 abline(model.male, col="red", lwd=2)
 ```
 
-- **Verifica que se cumplen las hipótesis del modelo**
+-   **Verifica que se cumplen las hipótesis del modelo**
 
 ```{r, include=TRUE}
 library(PASWR2)
@@ -63,9 +65,10 @@ res <- rstandard(model.male)
 shapiro.test(res)
 ```
 
-*Aunque no se verifica la hipótesis de normalidad de los residuos (p-valor$<0.05$), pero seguiremos con el ejercicio.*
+*Aunque no se verifica la hipótesis de normalidad de los residuos (p-valor*$<0.05$), pero seguiremos con el ejercicio.
 
-- **Obtén la predicción para cinco hombres de 20, 29, 46, 58 y 65 años de edad**
+-   **Obtén la predicción para cinco hombres de 20, 29, 46, 58 y 65 años de edad**
+
 ```{r, include=TRUE}
 newdata <- data.frame(age=c(20,29,46,58,65))
 
@@ -75,7 +78,7 @@ predictions
 
 ## 1.2. Emplea el fichero `bloodpress1.txt` para ajustar un modelo de regresión lineal que permita estimar la presión sistólica en mujeres según la edad.
 
-- **Seleccionamos los hombres, representamos un diagrama de dispersión y ajustamos un modelo de regresión lineal con la función `lm()`**
+-   **Seleccionamos los hombres, representamos un diagrama de dispersión y ajustamos un modelo de regresión lineal con la función `lm()`**
 
 ```{r, include=TRUE}
 pos <- which(datos$sex=="F")
@@ -92,23 +95,24 @@ cor(datos.female$age, datos.female$sbp)
 model.female <- lm(sbp~age, data=datos.female)
 ```
 
-- **Proporciona una interpretación para los coeficientes**
+-   **Proporciona una interpretación para los coeficientes**
+
 ```{r, include=TRUE}
 summary(model.female)
 ```
-* $\beta_0=97.0771$ mmHg: Valor esperado para una mujer de 0 años de edad (en este ejemplo, no tiene sentido)
 
-* $\beta_1=0.9493$: Por cada año que aumenta la edad de una mujer, se espera que la presión sistólica aumente en 0.9493 mmHg.
+-   $\beta_0=97.0771$ mmHg: Valor esperado para una mujer de 0 años de edad (en este ejemplo, no tiene sentido)
 
+-   $\beta_1=0.9493$: Por cada año que aumenta la edad de una mujer, se espera que la presión sistólica aumente en 0.9493 mmHg.
 
-- **Representa gráficamente la línea ajustada**
+-   **Representa gráficamente la línea ajustada**
 
 ```{r, include=TRUE}
 plot(datos.female$age, datos.female$sbp)
 abline(model.female, col="red", lwd=2)
 ```
 
-- **Verifica que se cumplen las hipótesis del modelo**
+-   **Verifica que se cumplen las hipótesis del modelo**
 
 ```{r, include=TRUE}
 library(PASWR2)
@@ -118,7 +122,8 @@ res <- rstandard(model.female)
 shapiro.test(res)
 ```
 
-- **Obtén la predicción para cinco mujeres de 23, 26, 32, 55 y 62 años de edad**
+-   **Obtén la predicción para cinco mujeres de 23, 26, 32, 55 y 62 años de edad**
+
 ```{r, include=TRUE}
 newdata <- data.frame(age=c(23,26,32,55,62))
 
@@ -128,12 +133,12 @@ predictions
 
 # 2. Para entregar
 
-## 2.1. Con el fichero `HSWRESTER` de la librería PASWR2, ajusta un modelo de regresión para predecir la cantidad de grasa (`tanfat`). Selecciona las variables `age`, `ht`, `wt`, `triceps` y `subscap` que mejor sirvan para predecir los valores de `tanfat`.
+## 2.1. Con el fichero `HSWRESTLER` de la librería PASWR2, ajusta un modelo de regresión para predecir la cantidad de grasa (`tanfat`). Selecciona las variables `age`, `ht`, `wt`, `abs`, `triceps` y `subscap` que mejor sirvan para predecir los valores de `tanfat`.
 
-- Selecciona las variables eliminado secuencialmente aquellas que no son estadísticamente significativas.
+-   Selecciona las variables eliminado secuencialmente aquellas que no son estadísticamente significativas.
 
-- Utiliza también la función `stepAIC()` de la librería MASS para seleccionar las variables.
+-   Utiliza también la función `stepAIC()` de la librería MASS para seleccionar las variables.
 
-- Interpreta los coeficientes del modelo.
+-   Interpreta los coeficientes del modelo.
 
-- Predice el valor de `tanfat` para un individuo con valores de la variable `abs` de 20 y 25 respectivamente.
+-   Predice el valor de `tanfat` para dos individuo con valores de la variable `abs` de 20mm y 25mm, respectivamente, y valores de `subscap` de 13mm.
